# refract-io-python

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: publish-pypi.yml
proto/: kvstream.proto
scripts/: gen_proto.sh
src/refract_io/: __init__.py  _client.py  _discovery.py  _types.py
src/refract_io/_proto/: kvstream_pb2.py  kvstream_pb2_grpc.py
